k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: complaint-app
  labels:
    name: complaint-app
